preprod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assur-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assur-api
  template:
    metadata:
      labels:
        app: assur-api
    spec:
      serviceAccountName: internal-app
      containers:
      - name: assur-api
        image: maryeeem/assur-api:134cbd9
        imagePullPolicy: Always
        ports:
        - containerPort: 5003
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: vault-assure-api-provider
