preprod/backend-services.yml

apiVersion: v1
kind: Service
metadata:
  name: assur-api-service
spec:
  selector:
    app: assur-api
  ports:
  - protocol: TCP
    port: 5003
    targetPort: 5003
