preprod/db-services.yml
apiVersion: v1
kind: Service
metadata:
  name: assure-api-db-service
spec:
  selector:
    app: assure-api-db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
