preprod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assure-api-ingress
  namespace: preprod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - assureapi.local.com
    secretName: assur-api-tls
  rules:
  - host: assureapi.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: assur-api-service
            port:
              number: 5003
